src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_confirm_retry_form.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
[Default]   ▸ Tasks   [Tab]                                                                                       🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1                 │───────────────────────────│                              │  ▎ #4 Task 4
   ◦ <1h                      │  ▎ #3 Task 3              │                              │   ✓ <1h
──────────────────────────────│   ◉ running               │                              │
  ▎ #2 Task 2                 │                           │                              │
   ◦ <1h                      │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
┌ Retry Agent ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Agent is stale. What do you want to do?                                                                             │
│                                                                                                                      │
│  [r] Resume (--continue in existing worktree)                                                                        │
│  [f] Fresh start (clean worktree + new dispatch)                                                                     │
│  [Esc] Cancel                                                                                                        │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[r] Resume  [f] Fresh start  [Esc] Cancel
