src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_empty_kanban_board.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
[Default]   ▸ Tasks   [Tab]                                                                                       🔕  [N]
        ▸ backlog 0 [ ]                 ◦ running 0                   ◦ review 0                     ◦ done 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[a] select all  [n]ew  [E]pic  [D] quick  [S]plit  [F]lat  [f]ilter  [?] help  [q]uit
