src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_help_overlay.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 ▸ Tasks   [Tab]                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
  ▌ #1 Task 1                   ── active                                                   ▎ #4 Task 4
   ◦ <1h                        ▎ #3 Task 3                                                  ✓ <1h
  ▎ #2 Task 2           ╔ Help ════════════════════════════════════════════════════════════════╗
   ◦ <1h                ║                                                                      ║
                        ║  Navigation                                                          ║
                        ║  [h/←] prev column     [j/↓] next task                               ║
                        ║  [l/→] next column     [k/↑] prev task                               ║
                        ║  [Enter] detail panel     [e] edit / enter epic                      ║
                        ║  [q] exit epic (in epic)   [Esc] clear selection                     ║
                        ║                                                                      ║
                        ║  Actions                                                             ║
                        ║  [n] new task   [E] new epic   [N] notifications                     ║
                        ║  [d] dispatch*  [m] move fwd   [M] move back                         ║
                        ║  [x] archive    [D] quick dsp  [g] session/board                     ║
                        ║  [G] session    (epic: jump to subtask tmux)                         ║
                        ║  [H] history    [V] epic done  [a] select all                        ║
                        ║  [Space] select  [f] filter repos  [W] wrap up  (task/epic)          ║
                        ║  [T] detach tmux panel  (Review tasks, supports batch)               ║
                        ║  [S] toggle split mode  (side-by-side with agent)                    ║
                        ║  [P] merge PR  [p] open PR in browser                                ║
                        ║  [J/K] reorder item up/down in column                                ║
                        ║                                                                      ║
                        ║  * [d] is context-dependent:                                         ║
                        ║    Backlog (no plan) → brainstorm                                    ║
                        ║    Backlog (has plan) → dispatch                                     ║
                        ║    Running → resume (if window gone)                                 ║
                        ║    Epic → dispatch next backlog subtask                              ║
                        ║                                                                      ║
                        ║  General                                                             ║
────────────────────────║  [?] this help  [N] notify on/off  [q] quit (or exit epic)           ║────────────────────────
                        ║  [Tab] switch to Review Board                                        ║
                        ║                                                                      ║
                        ║  [?] or [Esc] to close                                               ║
                        ╚══════════════════════════════════════════════════════════════════════╝



[?] or [Esc] to close help
