src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_kanban_with_archive_focused.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
[Default]   ▸ Tasks   [Tab]                                                                                       🔕  [N]
       ◦ backlog 2             ◦ running 1             ◦ review 0               ◦ done 1               ▸ Archive 1
────────────────────────│────────────────────│────────────────────────│────────────────────────│ Archive (1) ───────────
────────────────────────│  ── active         │                        │────────────────────────│────────────────────────
  ▎ #1 Task 1           │────────────────────│                        │  ▎ #4 Task 4           │  ▌ #10 archived task
   ◦ <1h                │  ▎ #3 Task 3       │                        │   ✓ <1h                │   ◦ <1h
────────────────────────│   ◉ running        │                        │────────────────────────│────────────────────────
  ▎ #2 Task 2           │────────────────────│                        │                        │
   ◦ <1h                │                    │                        │                        │
────────────────────────│                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[x] delete  [e] edit  [H] close  [q] quit
